test/analyze/type_check/variable_declaration/toplevel_missing_annotation.myte
module test

val x = 1

var y = ()

val a = (1, true)

fun main() {}